# bugsift

./: .env.example  .gitignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DEPLOY_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  MONITORING.md  PERFORMANCE.md  QUICK_START_DASHBOARD.md  QUICK_START_LOCAL.md  RBAC.md  README.md  RELEASE_v0.2.0.md  RUN_WITHOUT_DOCKER.md  SECURITY.md  SLA.md  TEST_ARCHITECTURE.md  TEST_DASHBOARD_GUIDE.md  TEST_DASHBOARD_IMPLEMENTATION.md  TEST_DASHBOARD_INDEX.md  TROUBLESHOOTING.md  UPGRADE_PATH.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  FILE_MANIFEST.md  README_TESTING.md  TESTING_COMPLETE.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_GUIDE.md  alembic.ini  coverage.json  coverage.xml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/tests/: README.md  conftest.py  conftest_e2e_config.py  pytest.ini  test_agent_steps.py  test_analysis_findings.py  test_auth.py  test_backfill.py  test_cards_actions.py  test_cards_repos.py  test_codeowners.py  test_coverage_boost.py  test_crypto.py  test_dedup_step.py  test_digest.py  test_e2e_workflows.py  test_feedback.py  test_feedback_approve.py  test_feedback_dedup.py  test_feedback_triage.py  test_github_settings.py  test_health.py  test_integration_examples.py  test_keys.py  test_llm_endpoint.py  test_llm_live.py  test_llm_providers.py  test_manifest.py  test_monitoring.py  test_monitoring_correlator.py  test_orchestrator_budget.py  test_rate_limit.py  (+17 more)
(+199 files in other folders)
