[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugsift"
version = "0.0.1"
description = "Maintainer's triage agent for open-source GitHub repositories."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "bugsift contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "gunicorn>=21.2",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "rq>=1.16",
  "cryptography>=42",
  "jinja2>=3.1",
  "pgvector>=0.2.5",
  "python-multipart>=0.0.9",
  "pyjwt[crypto]>=2.8",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.9",
  "aiosqlite>=0.20",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008: function-call default. FastAPI's Depends()/Body() in argument defaults
#       is the recommended pattern; exempt it.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["bugsift"]
ignore_missing_imports = true
